view.react/src/components/sidebar/Sidebar.module.scss
@import "src/global-styles/color-variables";
@import 'src/global-styles/bootstrap-breakpoints.scss';

.main {
  z-index: 6;
  font-size: 1.2rem;
  padding: 0;
  position: fixed;
  height: 100%;
  width: fit-content;
  max-height: 100%;

  a {
    color: $GREY-COLOR;
    margin-bottom: 1rem;
  }
}

.nav {
  overflow: auto;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  background-color: white;
  padding: 2rem;
  height: 70%;
  width: 105%;

  a {
    text-decoration: none;

    &:hover {
      color: $HOVER-COLOR;
    }
  }
}

.days {
  font-size: 1.6rem;
  color: $BLACK-COLOR;
  padding: 2rem 0 0 2rem;
  p {
    margin: 0;
  }
}

.overlay {
  z-index: 5;
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.5);
  cursor: pointer;
}

.versionContainer {
  font-size: 0.9rem;
  color: #cccccc;
  position: absolute;
  bottom: 10%;
}

@include media-breakpoint-up(lg) {
  .main {
    max-width: 25%;
    padding-right: 0;
    background-color: white;
  }

  .nav {
    padding-right: 0;
  }
}

